Leaf age section needs some more guidance
Working on Ecology section now

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -326,8 +326,8 @@ The high temperature carbon compensation point of sun leaves is higher in isopre
 ### Tree metabolism and growth, and survival
 
 **Vertical gradients affect tree metabolism and growth.**
-Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured as diameter breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizerelatedScalingTree2015].
-Specifically, increases are linked to increased leaf area and in part to increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific transpiration and photosynthesis (Table 2).
+Whole-tree transpiration and gross primary production (GPP) increase in tandem with increasing tree size, where size is most commonly measured as diameter at breast height (DBH), but functionally linked to metrics such as foliage biomass, crown volume, or height, all of which scale with DBH [**REFS**, @anderson-teixeiraSizerelatedScalingTree2015].
+Specifically, increases are linked to increased leaf area and in part to an increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability and associated elevation of $g_s$ and $A_A$ result in higher leaf area-specific transpiration and photosynthesis (Table 2).
 The net foliar photosynthate production is allocated among functions including respiration, woody growth, foliar turnover, belowground allocation, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 The proportion of GPP allocated to many of these increases with tree size, including ... foliar respiration (Table 2), reproduction [**REFS**; @westIncreasingRespiratoryCosts2020].As a result of increasing C allocation to these other functions, mass-specific - and sometimes even absolute - woody growth rates decrease with tree size [**REFS**; @anderson-teixeiraJointEffectsClimate2021; @anderson-teixeiraCarbonCyclingMature2021].
 However, NSC reserves increase with tree size, such that larger trees have relatively more buffer against biological and biophysical stressors [@niinemetsResponsesForestTrees2010a].
@@ -335,7 +335,7 @@ However, NSC reserves increase with tree size, such that larger trees have relat
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Because $g_s$ tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016], the taller trees that occupy canopy positions in relatively dense-canopy forests tend to have greater reductions in whole-tree transpiration and photosynthesis during periods of high atmospheric demand - be these on time scale of hours, days, or seasons [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021],consistent with the observation that  $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand - be these on time scale of hours , days, or seasons - tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that  $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
 
 The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments.
 While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions [@frittsTreeRingsClimate1976], only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
