--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -335,18 +335,18 @@ However, NSC reserves increase with tree size, such that larger trees have relat
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand - be these on time scale of hours , days, or seasons - tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that  $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
 
 The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments.
 While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions [@frittsTreeRingsClimate1976], only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
-These have generally found greater sensitivity to low precipitation or high summer temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021; @anderson-teixeiraJointEffectsClimate2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to this lower drought resistance of growth, larger trees also frequently exhibit lower resilience [@mcgregorTreeHeightLeaf2021; **REF**] and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
+These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021; @anderson-teixeiraJointEffectsClimate2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to lower drought resistance of growth, larger trees also frequently exhibit lower ability to bounce back from stress, ie. resilience [@mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
 Despite the potential for shorter trees in open forests to experience greater environmental stress [**REFS**], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraCarbonCyclingMature2021].
 
 There are, however, exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2021].
-Potential mechanisms for these patterns include stifling of understory $\lambda E$ under still, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis, increases nighttime respiratory carbon loss that disroportionately reduced carbon availability for growth among small trees accelerated asymmetric competition. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
+Potential mechanisms for these patterns include stifling of understory $\lambda E$ under low wind, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis. Furthermore, warming-induced increases in nighttime respiratory carbon loss may be particularly disadvantageous for understory trees that are operating closer to their light-compensation point than canopy trees. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
+![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees. In column  (a), large trees have a more negative response to high temperatures during the current or previous growing season. Shown are tree ring width (RW) responses to the most influential temperature variable at the site (Tmax or PET) of the largest versus smallest trees included in GLS model with a DBH x temperature interaction (Anderson-Teixeira et al. , in review) . In column (b), understory trees have more negative responses to high growing season temperatures across eight New England forests, (@rollinsonClimateSensitivityUnderstory2021) [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/Figure_4_tree_rings.png)
 
 ### C and water flux
 
